--- a/backend-railway/package.json
+++ b/backend-railway/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
-    "mercadopago": "^2.0.7",
+    "mercadopago": "^2.0.7"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0",
