--- a/backend-railway/package.json
+++ b/backend-railway/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "echo 'Skipping build step'"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
