--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^11.6.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vexor": "^0.2.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
