--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
-    "@mercadopago/sdk-js": "^0.0.3",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
@@ -34,8 +33,8 @@
     "@angular/cli": "^19.2.11",
     "@angular/compiler-cli": "^19.2.10",
     "@types/bootstrap": "^5.2.10",
+    "@types/http-proxy": "^1.17.16",
     "@types/jasmine": "~5.1.0",
-    "@types/mercadopago-sdk-js": "^2.0.17",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
