--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables and sensitive files
+server/.env
+nodemailer-backend/.env
+environment/environment.ts
+environment/environment.prod.ts
