--- a/phpServer/Dockerfile
+++ b/phpServer/Dockerfile
@@ -1,31 +1,35 @@
 FROM php:8.3-apache
-# Stick to 8.3 for now, or 8.2 if you prefer
+# Keep using 8.3 or 8.2 for stability
 
 WORKDIR /var/www/html
 
-# Install system dependencies
+# Stage 1: Install system dependencies and build extensions
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     apt-utils \
     libcurl4-openssl-dev \
     libzip-dev \
+    # Explicitly add zlib1g-dev, which is a common dependency for zip extension compilation
+    zlib1g-dev \
     git \
     unzip \
-    # We still need make and gcc for compilation
     make \
     gcc && \
-    # Clean up apt caches (moved here to reduce image size before source download)
+    # Clean up apt caches immediately after installation
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /tmp/*
 
-# Install and enable PHP extensions
+# Stage 2: Install and enable PHP extensions
+# We put this in a separate RUN to ensure previous dependencies are solid.
+# This also allows Docker to cache the system dependencies layer.
 RUN docker-php-ext-install curl json && \
-    # Use docker-php-source to prepare for PECL
+    # Extract PHP source to compile PECL extensions
     docker-php-source extract && \
-    # Install and enable the zip extension via pecl
+    # Install the zip extension using pecl
     pecl install zip && \
+    # Enable the zip extension
     docker-php-ext-enable zip && \
-    # Clean up PHP source files after compilation
+    # Clean up PHP source after compilation to reduce image size
     docker-php-source delete
 
 # Copy your application files to the container's working directory
