--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build:prod": "ng build --configuration production",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "serve -s dist/servicephoto-angular -l 8000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.11.3",
     "firebase": "^11.6.1",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.4",
     "tslib": "^2.3.0",
     "vexor": "^0.2.1",
     "zone.js": "~0.15.0"
