--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build:prod": "ng build --configuration production",
     "ng": "ng",
-    "start": "serve -s dist/servicephoto-angular -l 8000",
-    "build": "ng build",
+    "start": "serve -s dist/servicephoto-angular/browser -l 8000",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
