--- a/phpServer/.htaccess
+++ b/phpServer/.htaccess
@@ -1,12 +1,12 @@
 # .htaccess
 <IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Origin "https://cold-ailina-kowa77-12fcae88.koyeb.app"
     Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
     Header set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
     Header set Access-Control-Max-Age "86400"
 </IfModule>
 
-# Manejar las solicitudes OPTIONS
+# Este bloque es crucial para manejar las solicitudes OPTIONS directamente a nivel de Apache
 RewriteEngine On
 RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L] # Esto devuelve un 200 OK para OPTIONS y evita que llegue al PHP script para ser procesado por él.
+RewriteRule ^(.*)$ $1 [R=200,L]
