--- a/phpServer/.htaccess
+++ b/phpServer/.htaccess
@@ -6,7 +6,7 @@
     Header set Access-Control-Max-Age "86400"
 </IfModule>
 
-# Este bloque es crucial para manejar las solicitudes OPTIONS directamente a nivel de Apache
+# Este bloque es CRUCIAL para manejar las solicitudes OPTIONS directamente a nivel de Apache
 RewriteEngine On
 RewriteCond %{REQUEST_METHOD} OPTIONS
 RewriteRule ^(.*)$ $1 [R=200,L]
