--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "servicephoto-angular",
   "version": "0.0.0",
-   "scripts": {
+  "scripts": {
     "build:prod": "ng build --configuration production",
     "ng": "ng",
     "start": "npm run build:prod && serve -s dist/servicephoto-angular -l $PORT",
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.14",
+    "@angular/animations": "20.2.0",
     "@angular/cdk": "^19.2.18",
-    "@angular/common": "^19.2.10",
-    "@angular/compiler": "^19.2.10",
-    "@angular/core": "^19.2.10",
+    "@angular/common": "^20.2.0",
+    "@angular/compiler": "^20.2.0",
+    "@angular/core": "^20.2.0",
     "@angular/fire": "^19.1.0",
-    "@angular/forms": "^19.2.10",
+    "@angular/forms": "^20.2.0",
     "@angular/material": "^19.2.18",
-    "@angular/platform-browser": "^19.2.10",
-    "@angular/platform-browser-dynamic": "^19.2.10",
-    "@angular/router": "^19.2.10",
+    "@angular/platform-browser": "^20.2.0",
+    "@angular/platform-browser-dynamic": "^20.2.0",
+    "@angular/router": "^20.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
@@ -32,10 +32,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "serve": "^14.2.3",
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.10",
+    "@angular/build": "^20.2.0",
+    "@angular/cli": "^20.2.0",
+    "@angular/compiler-cli": "^20.2.0",
     "@types/bootstrap": "^5.2.10",
     "@types/http-proxy": "^1.17.16",
     "@types/jasmine": "~5.1.0",
@@ -45,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "serve": "^14.2.3",
+    "typescript": "~5.9.2"
   }
 }
